# todo_app_Phase-I

./: README.md
agents/: todo-implementer.md
hackhton-II-Phase-1/: README.md  pyproject.toml
hackhton-II-Phase-1/history/prompts/constitution/: 001-create-constitution.constitution.prompt.md
hackhton-II-Phase-1/history/prompts/phase-i-in-memory-console-todo-app/: 001-create-phase-i-spec.spec.prompt.md  002-create-phase-i-plan.plan.prompt.md  003-create-phase-i-tasks.tasks.prompt.md  004-implement-phase-i.implement.prompt.md
hackhton-II-Phase-1/specs/phase-i-in-memory-console-todo-app/: plan.md  spec.md  tasks.md
hackhton-II-Phase-1/src/: __init__.py  __main__.py  cli.py  interactive.py  main.py  models.py  service.py
hackhton-II-Phase-1/tests/: __init__.py  test_cli.py  test_models.py  test_service.py
memory/: constitution.md
